change some crap shit

--- a/SF Map.css
+++ b/SF Map.css
@@ -23,17 +23,9 @@ body {
 
 }
 
-#right-side{
-  width: 25%;
-  height: 100%;
-  float: right;
 
 
-
-}
-
-
-.ig {
+#ig {
     width: 25%;
     height: 100%;
     float: right;
