--- a/SF Map.css
+++ b/SF Map.css
@@ -5,6 +5,7 @@ html {
       
 body { 
      height: 100%; 
+     width: 100%;
      margin: 0; 
      padding: 0; 
 
@@ -24,16 +25,33 @@ body {
 }
 
 
+.main {
+    width: 30%;
+    max-height: 100%;
+    float: right;
 
-.ig {
+}
+
+
+
+.right-side {
     width: 30%;
     height: 100%;
     float: right;
+    background-color: blue;
 
 }
 
 img{
   height: 200px;
   width: 200px;
+  margin; 50% auto;
+
+
+}
+
+
+p{
+  font-family: Helvetica;
 
 }
