--- a/SF Map.css
+++ b/SF Map.css
@@ -25,6 +25,15 @@ body {
 
 }
 
+.main-wrapper{
+  width: 100%;
+  max-height: 100%;
+  float: right;
+  position: absolute;
+  overflow: auto;
+  
+
+}
 
 .main {
     width: 30%;
@@ -32,8 +41,11 @@ body {
     float: right;
     position: relative;
     background-color: #E6E6E6;
+    position: relative;
 
 }
+
+
 
 
 img{
